<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:orientation="vertical">

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="16dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:paddingLeft="15dp"
			android:text="提示：计算单位为万 - 等额本金"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/total_prices"/>
			<EditText
					android:id="@+id/prices"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/aera"/>
			<EditText
					android:id="@+id/aera"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
		</LinearLayout>

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/month_interest"/>
			<EditText
					android:id="@+id/month_interest"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/commission_charge"/>
			<EditText
					android:id="@+id/commission_charge"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
		</LinearLayout>

	</LinearLayout>



	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/unit_prices"/>
			<TextView
					android:id="@+id/unit_prices"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/blue"
					android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/down_payment"/>
			<TextView
					android:id="@+id/down_payment"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/blue"
					android:layout_weight="1"/>
		</LinearLayout>

	</LinearLayout>

	<Button
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:background="@color/light_background"/>


	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/unitPriceIncrease"/>
			<EditText
					android:id="@+id/unitPriceIncrease"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
		</LinearLayout>

		<Button
				android:id="@+id/calculate1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:textSize="20dp"
				android:text="计算方式1"/>

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/totalPriceIncrease"/>
			<EditText
					android:id="@+id/totalPriceIncrease"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
		</LinearLayout>

		<Button
				android:id="@+id/calculate2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:textSize="20dp"
				android:text="计算方式2"/>

	</LinearLayout>

	<Button
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:background="@color/light_background"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/finalUnitPrice"/>
			<TextView
					android:id="@+id/finalUnitPrice"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/blue"
					android:layout_weight="2"/>
		</LinearLayout>


		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/unitPriceIncreasePercent"/>
			<TextView
					android:id="@+id/unitPriceIncreasePercent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/blue"
					android:layout_weight="2"/>
		</LinearLayout>

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/finalTotalPrice"/>
			<TextView
					android:id="@+id/finalTotalPrice"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/blue"
					android:layout_weight="2"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="19dp"
					android:gravity="center"
					android:text="@string/totalPriceIncreasePercent"/>
			<TextView
					android:id="@+id/totalPriceIncreasePercent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/blue"
					android:layout_weight="2"/>
		</LinearLayout>

	</LinearLayout>


	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="20dp"
					android:gravity="center"
					android:layout_weight="1"
					android:text="@string/pay_back"/>
			<TextView
					android:id="@+id/pay_back"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="10dp"
					android:layout_weight="2"
					android:textColor="@color/red"
					android:textSize="20dp"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.1">
		</LinearLayout>

	</LinearLayout>

	<Button
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:background="@color/light_background"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:orientation="vertical">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="19dp"
				android:text="Tips:"/>
		<TextView
				android:id="@+id/tips"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="10dp"
				android:textSize="19dp"/>
	</LinearLayout>

</LinearLayout>